# pixel_paint_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: INSTALL_LINUX.md  pixel_paint_rs.desktop
docs/: ARCHITECTURE.md  RELEASE.md
locales/: de.json  en.json  es.json  fr.json  ja.json  ru.json  zh.json
packaging/windows/: pixel_paint_rs.nsi
scripts/release/: build_release_artifacts.sh  common.sh
src/: icon.rs  lib.rs  main.rs  theme.rs
src/app/: editor_state.rs  mod.rs  pixel_paint_app.rs  settings.rs
src/domain/: history.rs  mod.rs  stroke.rs  tab.rs
src/domain/document/: mod.rs  model.rs  tab_ops.rs
src/localization/: bundle.rs  languages.rs  manager.rs  mod.rs
src/persistence/: json.rs
src/persistence/session/: dto.rs  mod.rs  storage.rs
src/ui/: mod.rs  paint_palette.rs  render_core.rs
src/ui/canvas/: constants.rs  geometry.rs  input.rs  mod.rs  render.rs
src/ui/main_window/: export_png.rs  file_actions.rs  layout.rs  mod.rs  shortcut_actions.rs
src/ui/tabs/: edit.rs  mod.rs  strip.rs  widgets.rs
src/ui/toolbar/: mod.rs  sections.rs  widgets.rs
